--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^2.6.11",
     "css-loader": "^4.3.0",
+    "eslint": "^7.12.1",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.0.0",
