--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev-build": "NODE_ENV=development webpack",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "start": "webpack-dev-server --progress"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "@babel/preset-env": "^7.12.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "connect-api-mocker": "^1.9.0",
     "core-js": "^2.6.11",
     "css-loader": "^4.3.0",
     "eslint": "^7.12.1",
@@ -31,7 +33,10 @@
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.21.0"
+  }
 }
