--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-build": "NODE_ENV=development webpack",
-    "build": "NODE_ENV=production webpack",
+    "dev-build": "NODE_ENV=development webpack --progress",
+    "build": "NODE_ENV=production webpack --progress",
     "start": "webpack-dev-server --progress"
   },
   "author": "",
@@ -29,6 +29,7 @@
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prettier": "^2.1.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
@@ -37,6 +38,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "axios": "^0.21.0"
+    "axios": "^0.21.0",
+    "terser-webpack-plugin": "^4.2.3"
   }
 }
