--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": ">=0.21.1",
     "terser-webpack-plugin": "^4.2.3"
   }
 }
