--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "axios": ">=0.21.1",
+    "copy-webpack-plugin": "^6.2.1",
     "terser-webpack-plugin": "^4.2.3"
   }
 }
